# bankero

./: .gitignore  Cargo.toml  PRD.md  README.md  index.html
.cargo/: config.toml
.github/workflows/: ci.yml  clippy.yml  coverage.yml  nightly.yml  pipeline.yml  release.yml
apt/: index.html  public.gpg
apt/dists/stable/: InRelease  Release  Release.gpg
apt/dists/stable/main/binary-amd64/: Packages
apt/pool/main/b/bankero/: bankero_0.0.1-1_amd64.deb  bankero_0.0.2-1_amd64.deb  bankero_0.0.5-1_amd64.deb  bankero_0.0.6-1_amd64.deb  bankero_0.0.7-1_amd64.deb  bankero_0.0.8-1_amd64.deb
packaging/apt/: apt-ftparchive.conf  build-repo.sh
packaging/rpm/: bankero.spec  build-rpm.sh
scripts/: flows_coverage.sh
src/: cli.rs  config.rs  db.rs  domain.rs  main.rs  sync.rs  upgrade.rs
tests/: budget_flow.rs  cli_smoke.rs  confirm_flow.rs  flows_e2e.rs  lan_sync_ci.rs  piggy_flow.rs  prd_gaps.rs  sync_flow.rs
