[package]
name = "bankero"
version = "0.1.0"
edition = "2024"
description = "Local-first multi-currency ledger (CLI)"
repository = "https://github.com/JoCarrasco/bankero"

[package.metadata.deb]
maintainer = "Bankero Maintainers <noreply@github.com>"
depends = "$auto"
section = "utils"
priority = "optional"
assets = [
	["target/release/bankero", "usr/bin/", "755"],
	["README.md", "usr/share/doc/bankero/README.md", "644"],
	["PRD.md", "usr/share/doc/bankero/PRD.md", "644"],
]

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde", "clock"] }
clap = { version = "4.5", features = ["derive", "env"] }
directories = "5.0"
rusqlite = { version = "0.31", features = ["bundled", "chrono"] }
rust_decimal = { version = "1.36", features = ["serde", "std"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
uuid = { version = "1.8", features = ["v4", "serde"] }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.10"
